--- a/ECommerceServer/ECommerce.Order/ECommerce.Ordering.csproj
+++ b/ECommerceServer/ECommerce.Order/ECommerce.Ordering.csproj
@@ -13,6 +13,7 @@
   
   <ItemGroup>
     <Folder Include="Controllers\" />
+    <Folder Include="Data\Configuration\" />
   </ItemGroup>
   
   <ItemGroup>
